--- a/views/module.ejs
+++ b/views/module.ejs
@@ -17,7 +17,7 @@
             <h3>Module <%= nbr%></h3>
 
             <h5> Le module est 
-                <% if(etat[nbr]){ %>
+                <% if(etat[nbr-1]){ %>
                     actif
                     <% } else { %>
                         éteint
